<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="252dp"
        android:layout_height="252dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/me" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/email"/>
            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/my_email"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/linkedin" />

            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/my_name"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/University" />

            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/my_university"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                style="@style/TextSpec.Field"
                android:text="@string/major" />

            <TextView
                style="@style/TextSpec.Value"
                android:text="@string/my_major"/>
        </TableRow>
    </TableLayout>

</LinearLayout>