<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DetailMusician">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@color/darkerGray" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextContent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/musicians_name"
            android:textSize="32sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/origin"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/origin"
                    android:id="@+id/tv_item_origin"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/genre" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/genre"
                    android:id="@+id/tv_item_genre"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/active_year" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/active_year"
                    android:id="@+id/tv_item_active"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/member" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/member"
                    android:id="@+id/tv_item_member"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/album" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/album"
                    android:id="@+id/tv_item_album"/>
            </TableRow>
        </TableLayout>

        <TextView
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/lorem"
            android:id="@+id/tv_item_detail"/>
    </LinearLayout>
</ScrollView>